Content : Add content

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,10 @@
 <div class="card text-center">
      <div class="card-header">
-       Featured
+       Welcome to My Website
      </div>
      <div class="card-body">
-       <h5 class="card-title">Special title treatment</h5>
-       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-       <a href="#" class="btn btn-primary">Go somewhere</a>
-     </div>
-     <div class="card-footer text-muted">
-       2 days ago
+       <h5 class="card-title">Log in </h5>
+       <p class="card-text">Click the below Button to Log In </p>
+       <a href="/login" class="btn btn-primary">LOGIN to Website</a>
      </div>
    </div>
